Hardcoded Root Nav Cats + Subcats - to speed up home page load +minor fix - image align in New Arrivals

--- a/_tikimaster_styles.css
+++ b/_tikimaster_styles.css
@@ -469,6 +469,7 @@ td.ztxt { padding:0 20px 0 0px; }
   padding: 3px 4px;
   margin-bottom: 2px;
   font-weight: bold;
+  cursor:pointer;
 }
 
 #leftNav ul li:hover {
@@ -704,7 +705,7 @@ button.quickView:hover {
 
 /* Display Sad Tiki image with "No Image Available" text if product/category image is absent */
 li:not(.loadingBG) div.prodThumbContainer.w120h120 { width:120px; height:120px; background-image:url("img/blank-120x120.gif"); }
-li:not(.loadingBG) div.prodThumbContainer.w140h93 { width:140px; height:93px; background-image:url("img/blank-140x93.gif"); }
+div.prodThumbContainer.w140h93 { width:140px; height:93px; margin:0 auto; background-image:url("img/blank-140x93.gif"); }
 li:not(.loadingBG) div.prodThumbContainer.w160h160 { width:160px; height:160px; background-image:url("img/blank-160x160.gif"); }
 li:not(.loadingBG) div.prodThumbContainer.w236h177 { width:236px; height:177px; background-image:url("img/blank-236x177.gif"); }
 li:not(.loadingBG) div.prodThumbContainer.w312h234 { width:312px; height:234px; background-image:url("img/blank-312x234.gif"); }
